.cirrus.yml: 1 cpu, 1GB ram

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,10 +1,12 @@
 env:
-  CIRRUS_CLONE_DEPTH: 3
+  CIRRUS_CLONE_DEPTH: 1
 
 #freebsd-13-0
 
 freebsd_instance:
   image_family: freebsd-11-4
+  cpu: 1
+  memory: 1GB
 
 task:
 #  install_script: pkg install -y gcc
