--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: tests
-      run: ./run-tests
+      run: ./run-tests.sh
 #    - name: make
 #      run: make
 #    - name: make check
