improve test script

--- a/configure.project
+++ b/configure.project
@@ -6,7 +6,7 @@ VERSION="1.4b"
 PACKAGE_URL=''
 
 # Flags that will be used in all makefiles that compile code...
-PROJECT_CFLAGS='-Wall -g -O2' # -Wextra -Wno-unused-parameter -Wno-missing-field-initializers
+PROJECT_CFLAGS='-Wall -O2' # -Wextra -Wno-unused-parameter -Wno-missing-field-initializers
 PROJECT_CXXFLAGS="${PROJECT_CFLAGS}"
 PROJECT_CPPFLAGS=''
 PROJECT_LDFLAGS=''
