--- a/scripts/run-tests.cfg
+++ b/scripts/run-tests.cfg
@@ -7,6 +7,7 @@ help_param="-h"
 help_ret_code=0
 
 TEST_USE_SUBDIR='yes'
+TEST_RUN_GDB_ON_SEGFAULT='yes'
 #VERBOSE_ERRORS=1 #this is for CI
 
 make_cmd='make'
