--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,23 +1,29 @@
-name: C/C++ CI
+name: CI
 
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
 
 jobs:
-  build:
-
+  macOS-11:
+#   runs-on: macOS-latest
     runs-on: macos-11
-
     steps:
-    - uses: actions/checkout@v2
-    - name: tests
-      run: ./run-tests.sh
-#    - name: make
-#      run: make
-#    - name: make check
-#      run: make check
-#    - name: make distcheck
-#      run: make distcheck
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - name: Build and test app
+      run: |
+        ./scripts/test_ci.sh
+#   - name: make
+#     run: make
+
+#  Ubuntu:
+#    runs-on: ubuntu-latest
+#    steps:
+#    - name: Checkout repository
+#      uses: actions/checkout@v3
+#    - name: Build and test app
+#      run: |
+#        ./scripts/test_ci.sh
