--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,10 @@
 # https://github.com/rokoDev/rabbit/blob/master/.circleci/config.yml
 #    https://discuss.circleci.com/t/is-it-possible-to-build-and-test-my-project-in-docker-container-with-s390x-architecture/44077
-# https://circleci.com/docs/variables/
-# s390x: Installing packages takes too long, use rokoDev's docker
+#       s390x: Installing packages takes too long, use rokoDev's docker image
+#
+# - https://circleci.com/docs/variables/
+# - https://circleci.com/developer/images?imageType=machine
+# - https://circleci.com/docs/using-docker/
 
 # These (and other) variables are wrong when using GitLab:
 # CIRCLE_REPOSITORY_URL  : empty
@@ -15,23 +18,38 @@ commands:
   docker_build:
     steps:
       - run:
-          name: "checkout sources | build and test app"
+          name: "Checkout sources + Build and test app"
           command: |
             CIRCLE_REPOSITORY_URL='https://gitlab.com/wdlkmpx/unace1'
-            docker exec -it wcontainer bash -c "(
+            docker exec -it WCONTAINER bash -c "
                         set -ex;
-                        git clone --depth 1 --branch ${CIRCLE_BRANCH} ${CIRCLE_REPOSITORY_URL}
                         pwd;
+                        git clone --depth 1 --branch ${CIRCLE_BRANCH} ${CIRCLE_REPOSITORY_URL};
                         cd $(basename ${CIRCLE_REPOSITORY_URL});
                         ./scripts/test_ci.sh;
-                        )"
+                        "
+  docker_build2:
+    steps:
+      - run:
+          name: "Checkout sources + Build and test app"
+          command: |
+            CIRCLE_REPOSITORY_URL='https://gitlab.com/wdlkmpx/unace1'
+            git clone --depth 1 --branch ${CIRCLE_BRANCH} ${CIRCLE_REPOSITORY_URL}
+            docker exec -it WCONTAINER mkdir -p /tmp
+            docker cp $(basename ${CIRCLE_REPOSITORY_URL}) WCONTAINER:/tmp/
+            docker exec -it WCONTAINER bash -c "
+                        set -ex;
+                        pwd;
+                        cd /tmp/$(basename ${CIRCLE_REPOSITORY_URL});
+                        ./scripts/test_ci.sh;
+                        "
 
 
 jobs:
   ubuntu_s390x:
     machine:
       image: ubuntu-2004:current
-#    resource_class: large
+    resource_class: small
     environment:
       DOCKER_BUILDKIT: 1
     steps:
@@ -41,26 +59,29 @@ jobs:
           command: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - run:
           name: Run docker container for s390x
-          command: docker run -it -d --platform linux/s390x --name wcontainer rokodev/ubuntu2204-dev:1.0
-#          command: docker run -it -d --platform linux/s390x --name wcontainer s390x/ubuntu
+          command: docker run -it -d --platform linux/s390x --name WCONTAINER rokodev/ubuntu2204-dev:1.0
+#          command: docker run -it -d --platform linux/s390x --name WCONTAINER s390x/ubuntu
 #      - run:
 #          name: "Install deps"
-#          command: docker exec -it wcontainer bash -c "(
+#          command: docker exec -it WCONTAINER bash -c "
 #                        set -ex;
 #                        apt update;
 #                        apt upgrade -y;
 #                        apt-get install -y git build-essential gdb;
-#                        )"
+#                        "
       - docker_build
-#  slackware_14:
-#    machine:
-#      image: ubuntu-2004:current
-#    steps:
-#      - run: printenv
-#      - run:
-#          name: Run docker container for slackware
-#          command: docker run -it -d --name wcontainer aclemons/slackware:14.0
-#      - docker_build
+#
+# gcc 4.7
+  gcc_4_7:
+    machine:
+      image: ubuntu-2004:current
+    resource_class: small
+    steps:
+      - run: printenv
+      - run:
+          name: Run docker container for gcc
+          command: docker run -it -d --name WCONTAINER gcc:4.7
+      - docker_build2
 
 
 workflows:
@@ -71,8 +92,8 @@ workflows:
             branches:
               only:
                 - master
-#      - slackware_14:
-#          filters:
-#            branches:
-#              only:
-#                - master
+      - gcc_4_7:
+          filters:
+            branches:
+              only:
+                - master
