--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -6,11 +6,13 @@ env:
 freebsd_task:
   name: FreeBSD 11.4
   freebsd_instance:
-    image_family: freebsd-11-4
+    image_family: freebsd-13-1
+#   image_family: freebsd-12-4
+#   image_family: freebsd-11-4
     cpu: 1
     memory: 1GB
 #  pkginstall_script:
-#    - ./scripts/test_ci.sh freebsd
+#    - pkg install -y ...
   build_script:
     - ./scripts/test_ci.sh
 
@@ -24,16 +26,17 @@ freebsd_task:
 #    cpu: 1
 #    memory: 1GB
 ##  pkginstall_script:
-##    - ./scripts/test_ci.sh macos
+##    - brew install ...
 #  build_script:
 #    - ./scripts/test_ci.sh
 
 
 #======= Alpine Linux =========
 alpine_linux_task:
-  name: Alpine Linux 3.17
+  name: Alpine Linux
   container:
-    image: alpine:3.17
+    image: alpine
+#   image: alpine:3.17
     cpu: 1
     memory: 1GB
   pkginstall_script:
