--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,8 @@ on:
 
 jobs:
   macOS-11:
-#   runs-on: macOS-latest
-    runs-on: macos-11
+    runs-on: macOS-latest
+#   runs-on: macos-11
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
