--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,7 +4,7 @@ env:
 #======= FreeBSD =========
 # https://cirrus-ci.org/guide/FreeBSD/
 freebsd_task:
-  name: FreeBSD 11.4
+  name: FreeBSD
   freebsd_instance:
     image_family: freebsd-13-1
 #   image_family: freebsd-12-4
