--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,8 @@
 
 include ../config.mk
 
-APP  = unace1
+APP  = unace1$(EXE)
+
 # ls *.c | sed 's%\.c%.o%g'
 OBJS = uac.o uac_dcpr.o unace.o
 
@@ -11,37 +12,20 @@ CFLAGS += -I.. -I../lib
 all: $(APP)
 
 $(APP): $(OBJS)
-	@if ! test -f $(APP) && ! test -f $(APP).exe ; then \
-		echo "$(CC) $(CFLAGS) $(OBJS) -o $(APP) $(LDFLAGS) $(LIBS)"; \
-		$(CC) $(CFLAGS) $(OBJS) -o $(APP) $(LDFLAGS) $(LIBS); \
-	fi;
+	$(CC) $(CFLAGS) $(OBJS) -o $(APP) $(LDFLAGS) $(LIBS)
 
 strip: $(APP)
-	@if test -f $(APP).exe ; then \
-		echo $(STRIP) $(APP).exe; \
-		$(STRIP) $(APP).exe; \
-	else \
-		echo $(STRIP) $(APP); \
-		$(STRIP) $(APP); \
-	fi;
+	$(STRIP) $(APP)
 
 distclean: clean
 
 clean:
-	rm -f *.o *~ $(APP) $(APP).exe
+	rm -f *.o *~ $(APP)
 
 install: all
-	mkdir -p $(DESTDIR)$(bindir)
-	@if test -f $(APP).exe ; then \
-		echo install $(APP).exe; \
-		install $(APP).exe $(DESTDIR)$(bindir); \
-	else \
-		echo install $(APP); \
-		install $(APP) $(DESTDIR)$(bindir); \
-	fi;
+	install $(APP) $(DESTDIR)$(bindir)
 
 install-strip: strip install
 
 uninstall:
 	rm -f $(DESTDIR)$(bindir)/$(APP)
-
